--- a/charts/guard/values.yaml
+++ b/charts/guard/values.yaml
@@ -85,79 +85,94 @@ guard:
         - polygon
         - polygon-mainnet
 
-# ---- PATH External Auth Server (PEAS) configuration ----
-authServer:
-  enabled: true
-  replicas: 1
-  port: 10001
-  env:
-    - name: PORT
-      value: "10001"
-    # GRPC_HOST_PORT=guard-pads:10002 is the value to point to the default
-    # PADS server in the cluster created by the GUARD Helm Chart.
-    - name: GRPC_HOST_PORT
-      value: guard-pads:10002
-    # GRPC_USE_INSECURE_CREDENTIALS=true is required to run PEAS in the
-    # cluster created by the GUARD Helm Chart, as PADS does not have TLS
-    # enabled by default.
-    - name: GRPC_USE_INSECURE_CREDENTIALS
-      value: "true"
-
-# ---- PATH Auth Data Server (PADS) configuration ----
-# TODO_MVP(@commoddity): Remove this once Helm Charts Issue #27 is implemented.
-# This will create a simplified default API key implementation for GUARD and remove
-# any dependency on the PADS or PEAS services.
-# See: https://github.com/buildwithgrove/helm-charts/issues/27
-pads:
-  enabled: true
-  replicas: 1
-  port: 10002
-  # IMPORTANT: Exactly one of the following sections below must be set:
-  # - 1. YAML_FILEPATH
-  # - 2. POSTGRES_CONNECTION_STRING
-  # An error will be thrown if neither or both are set.
-
-  # -- 1. YAML_FILEPATH --
-  # IMPORTANT: To use a Postgres database as the PADS data source, comment out
-  # the below section and use the POSTGRES_CONNECTION_STRING section instead.
+  # ---- GUARD Auth configuration ----
+  # GUARD must be configured to use one or more authorization flows.
   #
-  # If the YAML_FILEPATH environment variable is set,
-  # PADS will use the file at the specified path as the data source.
-
-  env:
-  - name: PORT
-    value: "10002"
-  # The local path to the .yaml file containing the Gateway Endpoints.
-  - name: YAML_FILEPATH
-    value: "/app/data/.gateway-endpoints.yaml"
-  # Gateway endpoints define the allowed endpoints for a PATH instance.
-  # For a detailed breakdown of the possible format of this file, see:
-  # - See gateway endpoints YAML at https://path.grove.city/develop/envoy/envoy_config
-  # - See endpoint authorization at https://path.grove.city/develop/envoy/walkthrough
+  # The following authorization flows are supported:
+  # - API Key
+  # - Grove Legacy
   #
-  # IMPORTANT: For a production deployment, if using a YAML file as the PADS data source,
-  # the `pads.configMap` field should be overridden with the actual gateway endpoints configuration.
-  configMap:
-    # These endpoints correspond to the test requests
-    # defined in PATH's `makefiles/test_requests.mk` file.
-    .gateway-endpoints.yaml: |
-      endpoints:
-        test_endpoint_1_api_key:
-          auth:
-            api_key: "test_api_key"
-        test_endpoint_2_no_auth: {}
+  # TODO_IMPROVE(@commoddity): Add support for additional authorization flows.
+  # For example, JWT, OIDC, Basic Auth, etc.
+  auth:
+    # ---- API Key authorization flow configuration ----
+    # apiKey:
+    #   enabled: true
 
-  # -- 2. POSTGRES_CONNECTION_STRING --
-  # IMPORTANT: To use a Postgres database as the PADS data source,
-  # uncomment the env variable below and set the value to the connection string.
-  #
-  # If the POSTGRES_CONNECTION_STRING environment variable is set,
-  # PADS will use the specified connection string to connect to a Postgres database as the data source.
-  # For more details, see the documentation for the PADS Postgres data source:
-  # https://path.grove.city/develop/pads/postgres
-  # env:
-  # - name: PORT
-  #   value: "10002"
-  # # The connection string for the Postgres database.
-  # - name: POSTGRES_CONNECTION_STRING
-  #   value: "postgres://user:password@host:port/database" # Replace with your Postgres connection string
+    # ---- Grove legacy authorization flow configuration ----
+    groveLegacy:
+      enabled: true
+      # ---- PATH External Auth Server (PEAS) configuration ----
+      peas:
+        replicas: 1
+        port: 10001
+        env:
+          - name: PORT
+            value: "10001"
+          # GRPC_HOST_PORT=guard-pads:10002 is the value to point to the default
+          # PADS server in the cluster created by the GUARD Helm Chart.
+          - name: GRPC_HOST_PORT
+            value: guard-pads:10002
+          # GRPC_USE_INSECURE_CREDENTIALS=true is required to run PEAS in the
+          # cluster created by the GUARD Helm Chart, as PADS does not have TLS
+          # enabled by default.
+          - name: GRPC_USE_INSECURE_CREDENTIALS
+            value: "true"
+
+      # ---- PATH Auth Data Server (PADS) configuration ----
+      # TODO_MVP(@commoddity): Remove this once Helm Charts Issue #27 is implemented.
+      # This will create a simplified default API key implementation for GUARD and remove
+      # any dependency on the PADS or PEAS services.
+      # See: https://github.com/buildwithgrove/helm-charts/issues/27
+      pads:
+        replicas: 1
+        port: 10002
+        # IMPORTANT: Exactly one of the following sections below must be set:
+        # - 1. YAML_FILEPATH
+        # - 2. POSTGRES_CONNECTION_STRING
+        # An error will be thrown if neither or both are set.
+
+        # -- 1. YAML_FILEPATH --
+        # IMPORTANT: To use a Postgres database as the PADS data source, comment out
+        # the below section and use the POSTGRES_CONNECTION_STRING section instead.
+        #
+        # If the YAML_FILEPATH environment variable is set,
+        # PADS will use the file at the specified path as the data source.
+
+        env:
+        - name: PORT
+          value: "10002"
+        # The local path to the .yaml file containing the Gateway Endpoints.
+        - name: YAML_FILEPATH
+          value: "/app/data/.gateway-endpoints.yaml"
+        # Gateway endpoints define the allowed endpoints for a PATH instance.
+        # For a detailed breakdown of the possible format of this file, see:
+        # - See gateway endpoints YAML at https://path.grove.city/develop/envoy/envoy_config
+        # - See endpoint authorization at https://path.grove.city/develop/envoy/walkthrough
+        #
+        # IMPORTANT: For a production deployment, if using a YAML file as the PADS data source,
+        # the `pads.configMap` field should be overridden with the actual gateway endpoints configuration.
+        configMap:
+          # These endpoints correspond to the test requests
+          # defined in PATH's `makefiles/test_requests.mk` file.
+          .gateway-endpoints.yaml: |
+            endpoints:
+              test_endpoint_1_api_key:
+                auth:
+                  api_key: "test_api_key"
+              test_endpoint_2_no_auth: {}
+
+        # -- 2. POSTGRES_CONNECTION_STRING --
+        # IMPORTANT: To use a Postgres database as the PADS data source,
+        # uncomment the env variable below and set the value to the connection string.
+        #
+        # If the POSTGRES_CONNECTION_STRING environment variable is set,
+        # PADS will use the specified connection string to connect to a Postgres database as the data source.
+        # For more details, see the documentation for the PADS Postgres data source:
+        # https://path.grove.city/develop/pads/postgres
+        # env:
+        # - name: PORT
+        #   value: "10002"
+        # # The connection string for the Postgres database.
+        # - name: POSTGRES_CONNECTION_STRING
+        #   value: "postgres://user:password@host:port/database" # Replace with your Postgres connection string
