--- a/charts/path/Chart.yaml
+++ b/charts/path/Chart.yaml
@@ -7,4 +7,6 @@ version: 0.1.9
 dependencies:
   - name: guard
     version: 0.1.1
-    repository: https://buildwithgrove.github.io/helm-charts/
+    # repository: https://buildwithgrove.github.io/helm-charts/
+    # TODO_IN_THIS_PR(@commoddity): Remove this
+    repository: "file://../guard"
