--- a/charts/guard/templates/auth-api-key/api-keys-secret.yaml
+++ b/charts/guard/templates/auth-api-key/api-keys-secret.yaml
@@ -1,5 +1,5 @@
-{{- if and .Values.guard.services .Values.guard.gateway.enabled .Values.guard.auth.apiKey.enabled }}
-{{- $apiKeyConfig:= .Values.guard.auth.apiKey }}
+{{- if and .Values.services .Values.gateway.enabled .Values.auth.apiKey.enabled }}
+{{- $apiKeyConfig:= .Values.auth.apiKey }}
 
 # This secret is used to store a full list of API keys for the PATH service.
 ---
