--- a/charts/guard/templates/routing/httproute-notfound.yaml
+++ b/charts/guard/templates/routing/httproute-notfound.yaml
@@ -5,7 +5,7 @@
 # Use cases:
 #   - Requests to services not configured in the `values.yaml` file's `services` array
 #   - Requests to services not configured in any `*-values.yaml` file applied to the GUARD service
-{{- if .Values.guard.gateway.enabled }}
+{{- if .Values.gateway.enabled }}
 {{- $gwname:= default "guard" $.Values.fullnameOverride }}
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
