--- a/charts/guard/templates/auth-api-key/api-keys-secret.yaml
+++ b/charts/guard/templates/auth-api-key/api-keys-secret.yaml
@@ -9,6 +9,15 @@ type: Opaque
 metadata:
   name: api-keys-secret
 stringData:
-  {{- toYaml $apiKeyConfig.apiKeys | nindent 2 }}
+  # Populate the secret with the API keys from the `apiKeys` field in the
+  # `auth` section of the `values.yaml` file.
+  # The `key` is unused; only the `value` (API key) is used.
+  #
+  # For example:
+  # client_1: test_api_key
+  # client_2: another_api_key
+  {{- range $index, $value := $apiKeyConfig.apiKeys }}
+  client_{{ add $index 1 }}: {{ $value | quote }}
+  {{- end }}
 
 {{- end }}
