fix: ensure groveLegacy has zero value in guard values.yaml

--- a/charts/guard/values.yaml
+++ b/charts/guard/values.yaml
@@ -16,3 +16,9 @@ auth:
     enabled: true
     headerKey: ""
     apiKeys: []
+  groveLegacy:
+    enabled: false
+    peas:
+      enabled: false
+    pads:
+      enabled: false
