--- a/charts/path/Chart.yaml
+++ b/charts/path/Chart.yaml
@@ -7,6 +7,4 @@ version: 0.1.9
 dependencies:
   - name: guard
     version: 0.1.1
-    # repository: https://buildwithgrove.github.io/helm-charts/
-    # TODO_IN_THIS_PR(@commoddity): Remove this
-    repository: "file://../guard"
+    repository: https://buildwithgrove.github.io/helm-charts/
