--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,12 @@ repos:
     rev: v3.2.0
     hooks:
     -   id: trailing-whitespace
-    -   id: end-of-file-fixer
+    # TODO_FIX(@commoddity): This hook is causing a circular issue:
+    # it modifies the README.md that the helm-docs hook modifies,
+    # which causes helm-docs to run again, which modifies the README.md
+    # again, which causes this hook to run again, etc.
+    # Determine if we need this hook.
+    # -   id: end-of-file-fixer
     -   id: check-added-large-files
 - repo: https://github.com/buildwithgrove/helm-charts
   rev: docs-hook-0.1.2
