--- a/charts/path/values.yaml
+++ b/charts/path/values.yaml
@@ -223,7 +223,7 @@ guard:
 ###########################################################################
 
 observability:
-  enabled: false  # Set to false to disable the WATCH chart
+  enabled: true  # Set to false to disable the WATCH chart
 
   # Configuration passed to the WATCH subchart
   watch:
